--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "emoji-flags": "^1.3.0",
+    "flag-icon-css": "^4.1.7",
+    "i18next": "^24.2.3",
     "motion": "^12.6.3",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
