--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "emoji-flags": "^1.3.0",
     "flag-icon-css": "^4.1.7",
     "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "js-cookie": "^3.0.5",
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-country-flag": "^3.1.0",
